@@ -1,2 +1,6 @@
 # 🎧 TuneTalk
 一款專為遠距陪伴打造的極簡「語音通訊 × 同步聽歌」桌機軟體。
+指令:
+windows:
+編譯:javac -cp ".;tunetalk\*" tunetalk\*.java
+執行:java --enable-native-access=ALL-UNNAMED -cp ".;tunetalk\*" tunetalk.TuneTalkGUI
